src/test/success/function_recursive_call.egern
func recursiveFunc(n: int): int {
    print(n);
    if (n < 1) {
        return n;
    }
    return recursiveFunc(n - 1);
}

recursiveFunc(5);
