src/test/fail/return_empty_fail.egern
func nothing(n: int): int {
    return
}

nothing(4)
